Added: Elbow & Silhouette Plots on choosing K for K-means

--- a/notebooks/04_kmeans_analysis.ipynb
+++ b/notebooks/04_kmeans_analysis.ipynb
@@ -430,7 +430,8 @@
     "\n",
     "In Elbow plot, the K=3 is the point from which the inertia value starts plateauing, this kind of stabilization states, any further increment in k value is no good, since too low inertia value will have too densed and higher number of cluster. choosing High value of inertia will lead to less clusters that have point too far from the centroids. k=3 as per the plot seems the sweet spot.\n",
     "\n",
-    "Choosing k=3 decision solidified by the silhouette plot. As k = 3 has the highest silhouette score, making it the right choice for the k."
+    "Choosing k=3 decision is further agreed by the silhouette score plot. \n",
+    "As k = 3 has the highest silhouette score, making it the right choice for the k."
    ]
   },
   {
