Added: 2020 Q1 Plot rule vs Kmeans anomaly

--- a/notebooks/04_kmeans_analysis.ipynb
+++ b/notebooks/04_kmeans_analysis.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "54484843",
    "metadata": {},
    "outputs": [
@@ -729,6 +729,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rule Based Anomaly Count : 43\n",
+      "K-Means Anomaly Count : 22\n",
+      "Overlapping Anomaly Count: 19\n"
+     ]
     }
    ],
    "source": [
@@ -750,71 +759,12 @@
     "\n",
     "pd.Series(counts).plot(kind=\"bar\", title=\"Rule-based vs K-Means Anomalies\")\n",
     "plt.ylabel(\"Number of Dates\")\n",
-    "plt.savefig(\"reports/figures/rule_based_vs_Kmeans_anomaly.png\", bbox_inches='tight')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "4e8e4fea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "43"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(rule_dates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "3b3f63c3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(kmeans_dates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "cf722d6b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(overlap)"
+    "plt.savefig(\"reports/figures/rule_vs_Kmeans_anomaly.png\", bbox_inches='tight', pad_inches=0.1, dpi=300)\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"Rule Based Anomaly Count : {len(rule_dates)}\")\n",
+    "print(f\"K-Means Anomaly Count : {len(kmeans_dates)}\")\n",
+    "print(f\"Overlapping Anomaly Count: {len(overlap)}\")"
    ]
   },
   {
