Added: DBSCAN Analysis notebook

--- a/notebooks/04_kmeans_analysis.ipynb
+++ b/notebooks/04_kmeans_analysis.ipynb
@@ -109,19 +109,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-01 21:13:22,721 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-01 21:13:22,779 - INFO - QQQ | Row Count before: 5301\n",
-      "2026-01-01 21:13:22,796 - INFO - QQQ | Row Count after: 5300\n",
-      "2026-01-01 21:13:22,798 - INFO - QQQ | Reasons:\n",
-      "2026-01-01 21:13:22,799 - INFO - High < max(open, close, low)\n",
-      "2026-01-01 21:13:24,888 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-01 21:13:26,374 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-01 21:13:27,332 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-01 21:13:29,333 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-02 18:14:50,756 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-02 18:14:50,780 - INFO - QQQ | Row Count before: 5301\n",
+      "2026-01-02 18:14:50,782 - INFO - QQQ | Row Count after: 5300\n",
+      "2026-01-02 18:14:50,783 - INFO - QQQ | Reasons:\n",
+      "2026-01-02 18:14:50,785 - INFO - High < max(open, close, low)\n",
+      "2026-01-02 18:14:51,582 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-02 18:14:52,427 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-02 18:14:53,005 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-02 18:14:54,231 - INFO - [data.load]: ✅ All required columns exist\n",
       "d:\\Desktop\\Data Science Learning\\DS Self Projects\\IITG Capstone\\Stock Market Anomaly Detection\\stock-anomaly-detector\\src\\features\\returns.py:20: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
       "  daily_return = df['adj close'].pct_change()\n",
-      "2026-01-01 21:13:30,679 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-01 21:13:31,240 - INFO - [data.load]: ✅ All required columns exist\n"
+      "2026-01-02 18:14:55,050 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-02 18:14:55,426 - INFO - [data.load]: ✅ All required columns exist\n"
      ]
     },
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "fb917285",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "50faa554",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "ea0033ac",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "7fe0e0b0",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "eef1e16f",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "64a9be48",
    "metadata": {},
    "outputs": [
@@ -474,11 +474,11 @@
      "data": {
       "text/plain": [
        "{np.int32(0): np.float64(2.6712722472331705),\n",
-       " np.int32(1): np.float64(2.048404110295831),\n",
+       " np.int32(1): np.float64(2.0484041102958304),\n",
        " np.int32(2): np.float64(1.5139960048306482)}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "43449369",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "fe1bd88e",
    "metadata": {},
    "outputs": [
@@ -639,7 +639,7 @@
        "4 2020-03-16    QQQ             1        0  2.736320"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "2f98d058",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "b591869f",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "id": "54484843",
    "metadata": {},
    "outputs": [
@@ -810,11 +810,11 @@
    ],
    "source": [
     "df_rule = detect_rule_anomaly(df_features, ticker=None)\n",
-    "df_rule = df_rule[\n",
+    "df_rule_test = df_rule[\n",
     "    (df_rule[\"date\"] >= \"2020-01-01\") &\n",
     "    (df_rule[\"date\"] <= \"2020-03-31\")\n",
     "]\n",
-    "rule_dates = set(df_rule[\"date\"])\n",
+    "rule_dates = set(df_rule_test[\"date\"])\n",
     "kmeans_dates = set(df_kmeans_test[\"date\"])\n",
     "\n",
     "overlap = rule_dates & kmeans_dates\n",
@@ -837,9 +837,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96c69e17",
+   "metadata": {},
+   "source": [
+    "#### Persisting the data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "681c8cc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OUT_DIR = Path(\"data/processed\")\n",
+    "\n",
+    "df_features.to_csv(OUT_DIR / \"features.csv\", index=False)\n",
+    "df_kmeans_test.to_csv(OUT_DIR / \"anomalies_kmeans_test.csv\", index=False)\n",
+    "df_rule_test.to_csv(OUT_DIR / \"anomalies_rule_test.csv\", index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "681c8cc7",
+   "id": "681bccff",
    "metadata": {},
    "outputs": [],
    "source": []
