Added: notebooks with plots for rule_base, consensus, feature_sanity

--- a/notebooks/04_kmeans_analysis.ipynb
+++ b/notebooks/04_kmeans_analysis.ipynb
@@ -109,19 +109,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2026-01-02 18:14:50,756 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-02 18:14:50,780 - INFO - QQQ | Row Count before: 5301\n",
-      "2026-01-02 18:14:50,782 - INFO - QQQ | Row Count after: 5300\n",
-      "2026-01-02 18:14:50,783 - INFO - QQQ | Reasons:\n",
-      "2026-01-02 18:14:50,785 - INFO - High < max(open, close, low)\n",
-      "2026-01-02 18:14:51,582 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-02 18:14:52,427 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-02 18:14:53,005 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-02 18:14:54,231 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-03 01:45:26,229 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-03 01:45:26,235 - INFO - QQQ | Row Count before: 5301\n",
+      "2026-01-03 01:45:26,235 - INFO - QQQ | Row Count after: 5300\n",
+      "2026-01-03 01:45:26,235 - INFO - QQQ | Reasons:\n",
+      "2026-01-03 01:45:26,235 - INFO - High < max(open, close, low)\n",
+      "2026-01-03 01:45:28,183 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-03 01:45:30,369 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-03 01:45:31,911 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-03 01:45:35,111 - INFO - [data.load]: ✅ All required columns exist\n",
       "d:\\Desktop\\Data Science Learning\\DS Self Projects\\IITG Capstone\\Stock Market Anomaly Detection\\stock-anomaly-detector\\src\\features\\returns.py:20: FutureWarning: The default fill_method='pad' in Series.pct_change is deprecated and will be removed in a future version. Either fill in any non-leading NA values prior to calling pct_change or specify 'fill_method=None' to not fill NA values.\n",
       "  daily_return = df['adj close'].pct_change()\n",
-      "2026-01-02 18:14:55,050 - INFO - [data.load]: ✅ All required columns exist\n",
-      "2026-01-02 18:14:55,426 - INFO - [data.load]: ✅ All required columns exist\n"
+      "2026-01-03 01:45:36,883 - INFO - [data.load]: ✅ All required columns exist\n",
+      "2026-01-03 01:45:37,437 - INFO - [data.load]: ✅ All required columns exist\n"
      ]
     },
     {
@@ -744,7 +744,7 @@
     }
    ],
    "source": [
-    "df_rule = detect_rule_anomaly(df_features, ticker=None)\n",
+    "df_rule = detect_rule_anomaly(df_features)\n",
     "df_rule = df_rule[\n",
     "    df_rule[\"date\"].dt.year == 2019 \n",
     "]\n",
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "54484843",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,7 @@
     }
    ],
    "source": [
-    "df_rule = detect_rule_anomaly(df_features, ticker=None)\n",
+    "df_rule = detect_rule_anomaly(df_features)\n",
     "df_rule_test = df_rule[\n",
     "    (df_rule[\"date\"] >= \"2020-01-01\") &\n",
     "    (df_rule[\"date\"] <= \"2020-03-31\")\n",
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "681c8cc7",
    "metadata": {},
    "outputs": [],
