--- a/notebooks/05_dbscan_analysis.ipynb
+++ b/notebooks/05_dbscan_analysis.ipynb
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f4415dac",
    "metadata": {},
    "outputs": [],
    "source": [
     "# use Path(os.getcwd()) outside the vscode to get the root folder\n",
     "\n",
-    "# Root Folder - use hardcode in vscode jupyter notebook\n",
+    "# Root Folder - use hardcode in vscode jupyter notebook, due to kernel inconsistency\n",
     "ROOT_DIR = \"d:/Desktop/Data Science Learning/DS Self Projects/IITG Capstone/Stock Market Anomaly Detection/stock-anomaly-detector/\"\n",
     "project_root = ROOT_DIR\n",
     "\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "3ae16974",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "4c8cad74",
    "metadata": {},
    "outputs": [
